if(BUILD_RDKIX_BENCHMARK)
  include_directories("${RDKIX_INCLUDE_DIR}")
  include_directories("${RDKIX_INCLUDE_DIR}/rdkix")
  find_package(Boost 1.45.0 COMPONENTS program_options REQUIRED)
  function(build_rdkixtest RDKIXBENCHMARK_EXECUTABLE LIBRARY) 
    add_executable("${RDKIXBENCHMARK_EXECUTABLE}" rdkixmain.cpp)
    if("${RDKIX_LIB_DIR}" STREQUAL "")
      find_library(RDKIX_GRAPHMOL NAMES GraphMol)
      find_library(RDKIX_FILEPARSERS NAMES FileParsers)
      find_library(RDKIX_RDGENERAL NAMES RDGeneral)
    else()
      find_library(RDKIX_GRAPHMOL NAMES GraphMol PATHS "${RDKIX_LIB_DIR}" NO_DEFAULT_PATH)
      find_library(RDKIX_FILEPARSERS NAMES FileParsers PATHS "${RDKIX_LIB_DIR}" NO_DEFAULT_PATH)
      find_library(RDKIX_RDGENERAL NAMES RDGeneral PATHS "${RDKIX_LIB_DIR}" NO_DEFAULT_PATH)
    endif()
    set (EXTRA_LIBS "${RDKIX_GRAPHMOL}" "${RDKIX_FILEPARSERS}"
    	 "${RDKIX_RDGENERAL}" "${Boost_LIBRARIES}" "${LIBRARY}")
    set_property(TARGET "${RDKIXBENCHMARK_EXECUTABLE}" PROPERTY CXX_STANDARD 11)
    target_link_libraries ("${RDKIXBENCHMARK_EXECUTABLE}" ${EXTRA_LIBS})
    install(TARGETS "${RDKIXBENCHMARK_EXECUTABLE}" RUNTIME DESTINATION bin)
  endfunction()

  build_rdkixtest("RDKixBenchmark" "${SHARED_LIBRARY}")
  build_rdkixtest("RDKixBenchmark_static" "${STATIC_LIBRARY}")
endif()
